package batallafuturo;

public interface Atacante {
    void atacar();
}
