package batallafuturo;

public interface Defensor {
    void defender();
}
