package batallafuturo;

public interface Volador {
    void volar();
}
